--- a/templates/main.html
+++ b/templates/main.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Devsearch</title>
 </head>
 <body>
-$END$
+
+{% include 'navbar.html' %}
+
+{% block content %}
+
+{% endblock content %}
+
+<p>FOOTER</p>
+
 </body>
 </html>
