--- a/projects/templates/projects/project_form.html
+++ b/projects/templates/projects/project_form.html
@@ -10,9 +10,7 @@
 <form method="post">
     {% csrf_token %}
 
-    {% for field in form %}
-    {{field}}
-    {% endfor %}
+    {{form.as_p}}
     
     <input type="submit">
 </form>
