--- a/projects/templates/projects/project_form.html
+++ b/projects/templates/projects/project_form.html
@@ -7,7 +7,7 @@
 {% extends  'main.html' %}
 {% block content %}
 
-<form method="post">
+<form action="" method="POST">
     {% csrf_token %}
 
     {{form.as_p}}
