--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -11,14 +11,14 @@
 
 <table>
     <tr>
-        <th>ID</th>
+<!--        <th>ID</th>-->
         <th>Project</th>
         <th>Votes</th>
         <th>Ratio</th>
     </tr>
     <tr>
     {% for project in projects %}
-        <td>{{project.id}}</td>
+<!--        <td>{{project.id}}</td>-->
         <td>{{project.title}}</td>
         <td>{{project.vote_total}}</td>
         <td>{{project.vote_ratio}}%</td>
