--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -15,6 +15,7 @@
         <th>Project</th>
         <th>Votes</th>
         <th>Ratio</th>
+        <th></th>
     </tr>
     <tr>
     {% for project in projects %}
@@ -24,6 +25,7 @@
         <td>{{project.vote_ratio}}%</td>
         <td>{{project.created}}</td>
         <td><a href="{% url 'project' project.id %}">View</a></td>
+        <td><a href="{% url 'update_project' project.id %}">Edit</a></td>
     </tr>
     {% endfor %}
 
