--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -26,6 +26,7 @@
         <td>{{project.created}}</td>
         <td><a href="{% url 'project' project.id %}">View</a></td>
         <td><a href="{% url 'update_project' project.id %}">Edit</a></td>
+        <td><a href="{% url 'delete_project' project.id %}">Delete</a></td>
     </tr>
     {% endfor %}
 
