--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,7 +7,7 @@
 </head>
 <body>
 
-<h1>LOGO</h1>
+<img src="{% static 'images/logo.svg' %}">
 
 <a href="{% url 'create_project' %}">Create Project</a>
 
