--- a/projects/templates/projects/single-project.html
+++ b/projects/templates/projects/single-project.html
@@ -7,6 +7,8 @@
 {% extends  'main.html' %}
 
 {% block content %}
+<img src="{{ project.featured_image.url }}">
+
 <h1>{{project.title}}</h1>
 <p>{{project.description}}</p>
 {% for tag in project.tags.all %}
