--- a/templates/main.html
+++ b/templates/main.html
@@ -2,9 +2,17 @@
 {% load static %}
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Devsearch</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="{% static 'styles/main.css' %}">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+  <link rel="stylesheet" href="https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css" />
+
+  <link rel="stylesheet" href="{% static 'uikit/styles/uikit.css' %}" />
+  <link rel="stylesheet" href="{% static 'styles/app.css' %}" />
+
+  <title>DevSearch</title>
 </head>
 <body>
 
