--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -20,6 +20,7 @@
         </label>
         <ul class="header__menu">
           <li class="header__menuItem"><a href="{% url 'projects' %}">Projects</a></li>
+          <li class="header__menuItem"><a href="{% url 'profiles' %}">Users</a></li>
           <li class="header__menuItem"><a href="{% url 'create_project' %}">Create Project</a></li>
           <li class="header__menuItem"><a href="" class="btn btn--sub">Login</a></li>
         </ul>
