--- a/users/templates/users/profiles.html
+++ b/users/templates/users/profiles.html
@@ -6,8 +6,68 @@
 <body>
 {% extends 'main.html' %}
 {% block content %}
+  <main class="home">
+    <section class="hero-section text-center">
+      <div class="container container--narrow">
+        <div class="hero-section__box">
+          <h2>CONNECT WITH <span>DEVELOPERS</span></h2>
+          <h2>FROM AROUND THE WORLD</h2>
+        </div>
 
-<h1>profiles</h1>
+        <div class="hero-section__search">
+          <form class="form" action="#" method="get">
+            <div class="form__field">
+              <label for="formInput#search">Search Developers </label>
+              <input class="input input--text" id="formInput#search" type="text" name="text"
+                placeholder="Search by developer name" />
+            </div>
+
+            <input class="btn btn--sub btn--lg" type="submit" value="Search" />
+          </form>
+        </div>
+      </div>
+    </section>
+    <!-- Search Result: DevList -->
+    <section class="devlist">
+      <div class="container">
+        <div class="grid grid--three">
+
+          {% for profile in profiles %}
+
+          <div class="column card">
+            <div class="dev">
+              <a href="" class="card__body">
+                <div class="dev__profile">
+                  <img class="avatar avatar--md" src="{{ profile.profile_picture.url }}" alt="image" />
+                  <div class="dev__meta">
+                    <h3>{{ profile.name}}</h3>
+                    <h5>{{ profile.user_info|slice:"60"  }}</h5>
+                  </div>
+                </div>
+                <p class="dev__info">
+                  {{ profile.user_bio|slice:"200" }}
+                </p>
+
+                <div class="dev__skills">
+                  <span class="tag tag--pill tag--main">
+                    <small>Django</small>
+                  </span>
+                </div>
+
+              </a>
+            </div>
+          </div>
+          {% endfor %}
+
+
+
+
+
+        </div>
+      </div>
+    </section>
+
+  </main>
 
 {% endblock content %}
 </body>
