--- a/users/templates/users/profiles.html
+++ b/users/templates/users/profiles.html
@@ -49,9 +49,11 @@
                 </p>
 
                 <div class="dev__skills">
+                  {% for skill in profile.skill_set.all %}
                   <span class="tag tag--pill tag--main">
-                    <small>Django</small>
+                    <small>{{skill}}</small>
                   </span>
+                  {% endfor %}
                 </div>
 
               </a>
