--- a/users/templates/users/profiles.html
+++ b/users/templates/users/profiles.html
@@ -36,7 +36,7 @@
 
           <div class="column card">
             <div class="dev">
-              <a href="" class="card__body">
+              <a href="{% url 'user_profile' profile.id %}" class="card__body">
                 <div class="dev__profile">
                   <img class="avatar avatar--md" src="{{ profile.profile_picture.url }}" alt="image" />
                   <div class="dev__meta">
