--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -22,7 +22,12 @@
           <li class="header__menuItem"><a href="{% url 'projects' %}">Projects</a></li>
           <li class="header__menuItem"><a href="{% url 'profiles' %}">Users</a></li>
           <li class="header__menuItem"><a href="{% url 'create_project' %}">Create Project</a></li>
+
+          {% if request.user.is_authenticated %}
+          <li class="header__menuItem"><a href="{% url 'logout' %}" class="btn btn--sub">Logout</a></li>
+          {% else %}
           <li class="header__menuItem"><a href="{% url 'login' %}" class="btn btn--sub">Login</a></li>
+          {% endif %}
         </ul>
       </nav>
     </div>
