--- a/users/templates/users/login_register.html
+++ b/users/templates/users/login_register.html
@@ -7,12 +7,18 @@
 {% extends 'main.html' %}
 {% block content %}
 
+{% if page == 'register' %}
+<h1>Registration</h1>
+<p><a href="{% url 'login' %}">Login</a></p>
+{% else %}
 <form action="{% url 'login' %}" method="POST">
     {% csrf_token %}
     <input type="text" name="username" placeholder="username" />
     <input type="password" name="password" placeholder="Enter password" />
     <input type="submit" value="Login"/>
+    <p><a href="{% url 'register' %}">Sign Up</a></p>
 </form>
+{%  endif %}
 
 {% endblock content %}
 </body>
