--- a/users/templates/users/login_register.html
+++ b/users/templates/users/login_register.html
@@ -16,14 +16,52 @@
     <input type="submit" value="Register" />
 </form>
 <p><a href="{% url 'login' %}">Login</a></p>
+
+
 {% else %}
-<form action="{% url 'login' %}" method="POST">
-    {% csrf_token %}
-    <input type="text" name="username" placeholder="username" />
-    <input type="password" name="password" placeholder="Enter password" />
-    <input type="submit" value="Login"/>
-    <p><a href="{% url 'register' %}">Sign Up</a></p>
-</form>
+
+    <div class="auth">
+      <div class="card">
+        <div class="auth__header text-center">
+          <h3>Account Login</h3>
+          <p>Hello, Welcome Back!</p>
+        </div>
+
+        <form class="form auth__form" action="{% url 'login' %}" method="POST">
+            {% csrf_token %}
+          <div class="form__field">
+            <label for="formInput#text">Username: </label>
+            <input
+              class="input input--text"
+              id="formInput#text"
+              type="text"
+              name="username"
+              placeholder="Enter your username..."
+            />
+          </div>
+
+          <div class="form__field">
+            <label for="formInput#password">Password: </label>
+            <input
+              class="input input--password"
+              id="formInput#passowrd"
+              type="password"
+              name="password"
+              placeholder="••••••••"
+            />
+          </div>
+          <div class="auth__actions">
+            <input class="btn btn--sub btn--lg" type="submit" value="Log In" />
+            <a href="forgetpassword.html">Forget Password?</a>
+          </div>
+        </form>
+        <div class="auth__alternative">
+          <p>Don’t have an Account?</p>
+          <a href="{% url 'register' %}">Sign Up</a>
+        </div>
+      </div>
+    </div>
+
 {%  endif %}
 
 {% endblock content %}
