--- a/users/templates/users/login_register.html
+++ b/users/templates/users/login_register.html
@@ -5,17 +5,38 @@
 </head>
 <body>
 {% extends 'main.html' %}
+{% load static %}
 {% block content %}
 
 {% if page == 'register' %}
-<h1>Registration</h1>
-<form method="POST" action="{% url 'register' %}">
-    {% csrf_token %}
 
-    {{form.as_p}}
-    <input type="submit" value="Register" />
-</form>
-<p><a href="{% url 'login' %}">Login</a></p>
+    <div class="auth">
+      <div class="card">
+        <div class="auth__header text-center">
+          <h3>Registration</h3>
+          <p>Create new account</p>
+        </div>
+
+        <form class="form auth__form" method="POST" action="{% url 'register' %}">
+            {% csrf_token %}
+
+            {% for field in form %}
+
+          <div class="form__field">
+            <label for="formInput#text">{{field.label}}</label>
+              {{field}}
+          </div>
+            {% endfor %}
+          <div class="auth__actions">
+            <input class="btn btn--sub btn--lg" type="submit" value="Sign  In" />
+          </div>
+        </form>
+        <div class="auth__alternative">
+          <p>Already have an Account?</p>
+          <a href="{% url 'login' %}">Log In</a>
+        </div>
+      </div>
+    </div>
 
 
 {% else %}
