add account link and render in template

--- a/templates/main.html
+++ b/templates/main.html
@@ -12,7 +12,6 @@
   <link rel="stylesheet" href="{% static 'uikit/styles/uikit.css' %}" />
   <link rel="stylesheet" href="{% static 'styles/app.css' %}" />
 
-  <title>DevSearch</title>
 </head>
 <body>
 
@@ -33,4 +32,5 @@
 <p>FOOTER</p>
 
 </body>
+<script src="{% static 'uikit/app.js' %}"></script>
 </html>
