--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -22,6 +22,7 @@
           <li class="header__menuItem"><a href="{% url 'projects' %}">Projects</a></li>
           <li class="header__menuItem"><a href="{% url 'profiles' %}">Users</a></li>
           <li class="header__menuItem"><a href="{% url 'create_project' %}">Create Project</a></li>
+          <li class="header__menuItem"><a href="{% url 'account' %}">Account</a></li>
 
           {% if request.user.is_authenticated %}
           <li class="header__menuItem"><a href="{% url 'logout' %}" class="btn btn--sub">Logout</a></li>
