--- a/users/templates/users/login_register.html
+++ b/users/templates/users/login_register.html
@@ -26,6 +26,14 @@
             <label for="formInput#text">{{field.label}}</label>
               {{field}}
           </div>
+            {% if field.help_text %}
+              <small>{{field.help_text}}</small>
+            {% endif %}
+
+            {% for error in field.errors %}
+              <p>{{error}}</p>
+            {% endfor %}
+
             {% endfor %}
           <div class="auth__actions">
             <input class="btn btn--sub btn--lg" type="submit" value="Sign  In" />
