--- a/users/templates/users/account.html
+++ b/users/templates/users/account.html
@@ -50,7 +50,7 @@
 
           <div class="settings">
             <h3 class="settings__title">Projects</h3>
-            <a class="tag tag--pill tag--sub settings__btn tag--lg" href="#"><i class="im im-plus"></i> Add Project</a>
+            <a class="tag tag--pill tag--sub settings__btn tag--lg" href="{% url 'create_project' %}"><i class="im im-plus"></i> Add Project</a>
           </div>
 
           <table class="settings__table">
@@ -66,8 +66,8 @@
                 </p>
               </td>
               <td class="settings__tableActions">
-                <a class="tag tag--pill tag--main settings__btn" href="#"><i class="im im-edit"></i> Edit</a>
-                <a class="tag tag--pill tag--main settings__btn" href="#"><i class="im im-x-mark-circle-o"></i>
+                <a class="tag tag--pill tag--main settings__btn" href="{% url 'update_project' project.id %}"><i class="im im-edit"></i> Edit</a>
+                <a class="tag tag--pill tag--main settings__btn" href="{% url 'delete_project' project.id %}"><i class="im im-x-mark-circle-o"></i>
                   Delete</a>
               </td>
             </tr>
