--- a/users/templates/users/skill_form.html
+++ b/users/templates/users/skill_form.html
@@ -9,6 +9,10 @@
 <h1>Create Skill</h1>
 <form method="POST" action="">
     {% csrf_token %}
+    {% for field in form %}
+    {{field.label}}
+    {{field}}
+    {% endfor %}
     <input type="submit" value="submit" />
 </form>
 {% endblock content %}
