--- a/users/templates/users/profiles.html
+++ b/users/templates/users/profiles.html
@@ -15,11 +15,11 @@
         </div>
 
         <div class="hero-section__search">
-          <form class="form" action="#" method="get">
+          <form class="form" action="{% url 'profiles' %}" method="get">
             <div class="form__field">
-              <label for="formInput#search">Search Developers </label>
-              <input class="input input--text" id="formInput#search" type="text" name="text"
-                placeholder="Search by developer name" />
+              <label for="formInput#search">Search Users </label>
+              <input class="input input--text" id="formInput#search" type="text" name="search_query"
+                value="{{search_query}}" placeholder="Search by users name" />
             </div>
 
             <input class="btn btn--sub btn--lg" type="submit" value="Search" />
@@ -27,7 +27,7 @@
         </div>
       </div>
     </section>
-    <!-- Search Result: DevList -->
+
     <section class="devlist">
       <div class="container">
         <div class="grid grid--three">
