--- a/projects/templates/projects/single-project.html
+++ b/projects/templates/projects/single-project.html
@@ -54,33 +54,23 @@
               <input class="btn btn--sub btn--lg" type="submit" value="Comments" />
             </form>
             <div class="commentList">
+              {% for review in project.review_set.all %}
               <div class="comment">
-                <a href="profile.html">
+                <a href="">
                   <img class="avatar avatar--md"
-                    src="https://pbs.twimg.com/profile_images/1335382240931368961/b3wSZKj4_400x400.jpg" alt="user" />
+                    src="{{review.owner.profile_picture.url}}" alt="user" />
                 </a>
+
                 <div class="comment__details">
-                  <a href="profile.html" class="comment__author">someone</a>
+                  <a href="{% url 'user_profile' review.owner.id %}" class="comment__author">{{review.owner.name}}</a>
                   <p class="comment__info">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit alias numquam perferendis
-                    mollitia minus minima exercitationem possimus ab deserunt qui, soluta iusto doloribus eveniet
-                    similique consequuntur ratione, dignissimos ut magni laborum quo.
+                    {{review.body}}
                   </p>
                 </div>
-              </div>
-              <div class="comment">
-                <a href="profile.html">
-                  <img class="avatar avatar--md" src="x" alt="user" />
-                </a>
-                <div class="comment__details">
-                  <a href="profile.html" class="comment__author">someone else</a>
-                  <p class="comment__info">
-                    Consectetur adipisicing elit. Reprehenderit alias numquam perferendis mollitia minus minima
-                    exercitationem possimus ab deserunt qui, ratione, dignissimos ut magni laborum quo.
-                  </p>
-                </div>
+
               </div>
             </div>
+            {% endfor %}
           </div>
         </div>
       </div>
