--- a/projects/templates/projects/single-project.html
+++ b/projects/templates/projects/single-project.html
@@ -43,18 +43,27 @@
             <h5 class="project--rating">
               {{project.vote_ratio}}% Postitive Feedback ({{project.vote_total}} votes)
             </h5>
-
-            <form class="form" action="#" method="POST">
-              <!-- Textarea -->
+            {% if request.user.profile.id in project.review_creators %}
+            <p>Already reviewed</p>
+            {% elif request.user.profile == project.owner %}
+            <p>Cannot review own project</p>
+            {% elif request.user.is_authenticated %}
+            <form class="form" action="{% url 'project' project.id %}" method="POST">
+              {% csrf_token %}
+              {% for field in form %}
               <div class="form__field">
-                <label for="formInput#textarea">Comments: </label>
-                <textarea class="input input--textarea" name="message" id="formInput#textarea"
-                  placeholder="Write your comments here..."></textarea>
+                <label for="formInput#textarea">{{field.label}}</label>
+                {{field}}
               </div>
+              {% endfor %}
               <input class="btn btn--sub btn--lg" type="submit" value="Comments" />
             </form>
+            {% else %}
+            <a href="{% url 'login' %}?next={{request.path}}">Login</a>
+            {% endif %}
             <div class="commentList">
               {% for review in project.review_set.all %}
+              {% if review.body %}
               <div class="comment">
                 <a href="">
                   <img class="avatar avatar--md"
@@ -70,6 +79,7 @@
 
               </div>
             </div>
+            {% endif %}
             {% endfor %}
           </div>
         </div>
