--- a/users/templates/users/inbox.html
+++ b/users/templates/users/inbox.html
@@ -10,16 +10,18 @@
 {% block content %}
   <main class="inbox my-xl">
     <div class="content-box">
-      <h3 class="inbox__title">New Messages(<span>X</span>)</h3>
+      <h3 class="inbox__title">New Messages(<span>{{unread}}</span>)</h3>
       <ul class="messages">
-
+        
+        {% for message in messageRequests %}
         <li class="message message--unread">
           <a href="message.html">
-            <span class="message__author">Sender</span>
-            <span class="message__subject">subject</span>
-            <span class="message__date">created</span>
+            <span class="message__author">{{message.name}}</span>
+            <span class="message__subject">{{message.subject}}</span>
+            <span class="message__date">{{message.created}}</span>
           </a>
         </li>
+        {% endfor %}
 
       </ul>
     </div>
