--- a/users/templates/users/inbox.html
+++ b/users/templates/users/inbox.html
@@ -12,9 +12,13 @@
     <div class="content-box">
       <h3 class="inbox__title">New Messages(<span>{{unread}}</span>)</h3>
       <ul class="messages">
-        
+
         {% for message in messageRequests %}
+        {% if message.is_read == False %}
         <li class="message message--unread">
+          {% else %}
+        <li class="message">
+          {% endif %}
           <a href="message.html">
             <span class="message__author">{{message.name}}</span>
             <span class="message__subject">{{message.subject}}</span>
