--- a/users/templates/users/message.html
+++ b/users/templates/users/message.html
@@ -12,12 +12,12 @@
   <main class="messagePage my-xl">
     <div class="content-box">
       <div class="message">
-        <a class="backButton" href="inbox.html"><i class="im im-angle-left"></i></a>
-        <h2 class="message__subject">subject</h4>
-          <a href="profile.html" class="message__author">author</a>
-          <p class="message__date">date</p>
+        <a class="backButton" href="{% url 'inbox' %}"><i class="im im-angle-left"></i></a>
+        <h2 class="message__subject">{{message.subject}}</h4>
+          <a href="profile.html" class="message__author">{{message.name}}</a>
+          <p class="message__date">{{message.created}}</p>
           <div class="message__body">
-              message
+              {{message.body}}
           </div>
       </div>
     </div>
