add create tag option

--- a/projects/templates/projects/project_form.html
+++ b/projects/templates/projects/project_form.html
@@ -22,6 +22,11 @@
                     </div>
                     {% endfor %}
 
+                    <div class="form__field">
+                        <label for="formInput#text">Tags</label>
+                        <textarea name="new_tags" placeholder="enter new tag, separate tags with space"></textarea>
+                    </div>
+
                     <input class="btn btn--sub btn--lg  my-md" type="submit" value="Submit" />
                 </form>
             </div>
