edit add project functionality

--- a/projects/templates/projects/project_form.html
+++ b/projects/templates/projects/project_form.html
@@ -24,7 +24,7 @@
 
                     <div class="form__field">
                         <label for="formInput#text">Tags</label>
-                        <textarea name="new_tags" placeholder="enter new tag, separate tags with space"></textarea>
+                        <textarea name="new_tags" placeholder="Enter tags here. Separate them with space"></textarea>
                     </div>
 
                     <input class="btn btn--sub btn--lg  my-md" type="submit" value="Submit" />
