--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -35,7 +35,7 @@
           <div class="column">
             <div class="card project">
               <a href="{% url 'project' project.id %}" class="project">
-                <img class="project__thumbnail" src="{{project.featured_image.url}}" alt="project thumbnail" />
+                <img class="project__thumbnail" src="{{project.imageUrl}}" alt="project thumbnail" />
                 <div class="card__body">
                   <h3 class="project__title">{{project.title}}</h3>
                   <p><a class="project__author">{{project.owner.name}}</a></p>
