--- a/projects/templates/projects/single-project.html
+++ b/projects/templates/projects/single-project.html
@@ -30,7 +30,7 @@
             {% endif %}
         </div>
         <div class="column column--2of3">
-          <img class="singleProject__preview" src="{{ project.featured_image.url }}" alt="portfolio thumbnail" />
+          <img class="singleProject__preview" src="{{ project.imageUrl }}" alt="portfolio thumbnail" />
           <a class="singleProject__developer">Author</a>
           <h2 class="singleProject__title">{{project.title}}</h2>
           <h3 class="singleProject__subtitle">About the Project</h3>
