fix missing/deleted profile image error

--- a/users/templates/users/user_profile.html
+++ b/users/templates/users/user_profile.html
@@ -12,7 +12,7 @@
         <div class="column column--1of3">
           <div class="card text-center">
             <div class="card__body dev">
-              <img class="avatar avatar--xl" src="{{ profile.profile_picture.url }}" />
+              <img class="avatar avatar--xl" src="{{ profile.imageUrl }}" />
               <h2 class="dev__name">{{profile.name}}</h2>
               <p class="dev__title">{{profile.user_info}}</p>
               <ul class="dev__social">
