fix missing/deleted profile image error

--- a/projects/templates/projects/single-project.html
+++ b/projects/templates/projects/single-project.html
@@ -67,7 +67,7 @@
               <div class="comment">
                 <a href="">
                   <img class="avatar avatar--md"
-                    src="{{review.owner.profile_picture.url}}" alt="user" />
+                    src="{{review.owner.imageUrl}}" alt="user" />
                 </a>
 
                 <div class="comment__details">
