--- a/users/templates/users/message.html
+++ b/users/templates/users/message.html
@@ -15,7 +15,7 @@
         <a class="backButton" href="{% url 'inbox' %}"><i class="im im-angle-left"></i></a>
         <h2 class="message__subject">{{message.subject}}</h4>
           {% if message.sender %}
-          <a href="{{% url 'user_profile' message.sender.id %}}" class="message__author">{{message.name}}</a>
+          <a href="{% url 'user_profile' message.sender.id %}" class="message__author">{{message.name}}</a>
           {% else %}
           <p class="message__author">{{message.name}}</p>
           {% endif %}
