--- a/projects/templates/projects/single-project.html
+++ b/projects/templates/projects/single-project.html
@@ -31,7 +31,7 @@
         </div>
         <div class="column column--2of3">
           <img class="singleProject__preview" src="{{ project.imageUrl }}" alt="portfolio thumbnail" />
-          <a class="singleProject__developer">Author</a>
+          <a class="singleProject__developer" href="{% url 'user_profile' project.owner.id %}">{{project.owner.name}}</a>
           <h2 class="singleProject__title">{{project.title}}</h2>
           <h3 class="singleProject__subtitle">About the Project</h3>
           <div class="singleProject__info">
